Ajout des settigns

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,12 +19,16 @@
     <string name="tri_date">Date de création</string>
     <string name="tri_alpha">Ordre alphabétique</string>
     <string name="tri_nombre">Nombre de vidéos</string>
-  	<string name="tri_source">Source des vidéos</string>
+    <string name="tri_source">Source des vidéos</string>
     <string name="search_query">Ce que vous avez tapé</string>
     <string name="checkbox_youtube">Youtube</string>
     <string name="checkbox_dailymotion">Dailymotion</string>
     <string name="title_activity_video">VideoActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="connection_error">Veuillez activer votre connexion Internet</string>
-
+    <string name="pref_video_display_settings">Affichage des vidéos</string>
+    <string name="pref_video_youtube_display">Nombre de vidéos Youtube</string>
+    <string name="pref_video_display_youtube_summary">Nombre de vidéos de Youtube affichées</string>
+    <string name="pref_video_daily_display">Nombre de vidéos Dailymotion</string>
+    <string name="pref_video_display_daily_summary">Nombre de vidéos de Dailymotion affichées</string>
 </resources>
